--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
           </div>
         </div>
 
-        <div class="cards">
-          <div class="card mt-3" style="width: 18rem; height: 25rem">
+        <div id="cards">
+          <!-- <div class="card mt-3" style="width: 18rem; height: 25rem">
             <img
               src="./assets/img/Museum_Tour.jpg"
               class="card-img-top"
@@ -183,7 +183,7 @@
               </p>
               <a href="./details.html" class="btn btn-primary">More info...</a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
@@ -239,5 +239,8 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/actual.js"></script>
   </body>
 </html>
