--- a/comming.html
+++ b/comming.html
@@ -227,5 +227,8 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <!-- <script src="./assets/js/comming.js"></script> -->
   </body>
 </html>
