--- a/comming.html
+++ b/comming.html
@@ -75,9 +75,13 @@
         </h2>
       </div>
 
-      <div class="buscador">
-        <div class="d-flex gap-5 justify-content-between">
-          <div class="flex-row list-group mx-0 w-auto justify-content-start">
+      <div id="buscador">
+        <div
+          class="d-flex gap-5 flex-sm-column-reverse flex-md-column-reverse flex-lg-column flex-sm-row justify-content-sm-between"
+        >
+          <div
+            class="flex-row list-group mx-0 w-auto justify-content-start row row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-3"
+          >
             <label class="list-group-item d-flex gap-2">
               <input
                 class="form-check-input flex-shrink-0"
@@ -132,48 +136,11 @@
           </div>
         </div>
       </div>
-      <div class="cards">
-        <div class="card mt-3" style="width: 18rem; height: 25rem">
-          <img
-            src="./assets/img/Food_Fair.jpg"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Event 1</h5>
-            <p class="card-text">
-              Some quick example text to build on the Event and make up the bulk
-              of the card's content.
-            </p>
-            <a href="./details.html" class="btn btn-primary">More info...</a>
-          </div>
-        </div>
-        <div class="card mt-3" style="width: 18rem; height: 25rem">
-          <img src="./assets/img/Marathon.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Event 2</h5>
-            <p class="card-text">
-              Some quick example text to build on the Event and make up the bulk
-              of the card's content.
-            </p>
-            <a href="./details.html" class="btn btn-primary">More info...</a>
-          </div>
-        </div>
-        <div class="card mt-3" style="width: 18rem; height: 25rem">
-          <img
-            src="./assets/img/Music_Concert.jpg"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Event 3</h5>
-            <p class="card-text">
-              Some quick example text to build on the Event and make up the bulk
-              of the card's content.
-            </p>
-            <a href="./details.html" class="btn btn-primary">More info...</a>
-          </div>
-        </div>
+      <div
+        id="cards"
+        class="d-flex justify-content-center align-content-center row row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-3 mt-5"
+      >
+        <!-- insert cards -->
       </div>
     </main>
     <footer
@@ -229,6 +196,6 @@
     ></script>
     <script src="./assets/js/data.js"></script>
     <script src="./assets/js/main.js"></script>
-    <!-- <script src="./assets/js/comming.js"></script> -->
+    <script src="./assets/js/comming.js"></script>
   </body>
 </html>
