--- a/index.html
+++ b/index.html
@@ -84,9 +84,13 @@
       </div>
 
       <div>
-        <div class="buscador">
-          <div class="d-flex gap-5 justify-content-between">
-            <div class="flex-row list-group mx-0 w-auto justify-content-start">
+        <div id="buscador" class="">
+          <div
+            class="flex-sm-column-reverse flex-md-column-reverse flex-lg-column d-flex gap-5 justify-content-between"
+          >
+            <div
+              class="flex-row list-group mx-0 w-auto justify-content-start row row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-3"
+            >
               <label class="list-group-item d-flex gap-2">
                 <input
                   class="form-check-input flex-shrink-0"
@@ -142,48 +146,11 @@
           </div>
         </div>
 
-        <div id="cards">
-          <!-- <div class="card mt-3" style="width: 18rem; height: 25rem">
-            <img
-              src="./assets/img/Museum_Tour.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Event 1</h5>
-              <p class="card-text">
-                Some quick example text to build on the Event 1 and make up the
-                bulk of the card's content.
-              </p>
-              <a href="./details.html" class="btn btn-primary">More info...</a>
-            </div>
-          </div>
-          <div class="card mt-3" style="width: 18rem; height: 25rem">
-            <img src="./assets/img/Cinema.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Event 2</h5>
-              <p class="card-text">
-                Some quick example text to build on the Event 1 and make up the
-                bulk of the card's content.
-              </p>
-              <a href="./details.html" class="btn btn-primary">More info...</a>
-            </div>
-          </div>
-          <div class="card mt-3" style="width: 18rem; height: 25rem">
-            <img
-              src="./assets/img/Costume_Party.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Event 3</h5>
-              <p class="card-text">
-                Some quick example text to build on the Event 1 and make up the
-                bulk of the card's content.
-              </p>
-              <a href="./details.html" class="btn btn-primary">More info...</a>
-            </div>
-          </div> -->
+        <div
+          id="cards"
+          class="d-flex justify-content-center align-content-center row row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-3 mt-5"
+        >
+          <!-- insert cards -->
         </div>
       </div>
     </main>
