--- a/comming.html
+++ b/comming.html
@@ -25,6 +25,7 @@
         <img src="./assets/img/Logo.png" width="130" height="30" alt="Logo" />
       </a>
       <button
+        id="menu-toggle"
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
@@ -70,7 +71,7 @@
           <a
             class="text-mute text-decoration-none text-black"
             href="./past.html"
-            >></a
+            >&gt;</a
           >
         </h2>
       </div>
