agrega busqueda por input y details

--- a/details.html
+++ b/details.html
@@ -66,32 +66,9 @@
 
     <main>
       <div
+        id="detail"
         class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
-      >
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Name</strong>
-          <h3 class="mb-0">15-02-23</h3>
-          <div class="mb-1 text-mute">Category</div>
-          <div class="mb-1 text-mute">Place</div>
-          <p class="mb-auto">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure maxime
-            animi aliquid velit tenetur quo beatae molestiae omnis neque laborum
-            atque eligendi ex aperiam tempore, harum laboriosam sint
-            necessitatibus sed? Inventore tempore ab accusantium vero. Corrupti
-            facilis omnis at, dolorem non fugit natus quae quo iusto a
-            exercitationem, commodi reprehenderit autem dolores voluptas eum
-            eaque enim voluptates alias distinctio tenetur! Rem, deleniti.
-          </p>
-          <a href="#" class="">Price</a>
-        </div>
-        <div class="col-auto w-25 d-none d-lg-block position-static">
-          <img
-            class="object-fit-cover h-75"
-            src="./assets/img/Costume_Party.jpg"
-            alt="event"
-          />
-        </div>
-      </div>
+      ></div>
     </main>
 
     <footer
@@ -145,5 +122,8 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/details.js"></script>
   </body>
 </html>
