--- a/index.html
+++ b/index.html
@@ -3,12 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
 
     <link
       rel="shortcut icon"
@@ -16,12 +10,17 @@
       type="image/x-icon"
     />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Home - Amazing Events</title>
-    <script src="./assets/js/index.js"></script>
   </head>
 
   <body class="container">
@@ -102,6 +101,8 @@
                 class="form-control"
                 placeholder="Nombre del evento..."
                 aria-label="Search"
+                name="search"
+                id="search"
               />
               <!-- </form> -->
               <div id="log"></div>
