--- a/stats.html
+++ b/stats.html
@@ -17,7 +17,6 @@
 
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Stats - Amazing Events</title>
-    <script src="./assets/js/index.js"></script>
   </head>
 
   <body class="container">
@@ -75,6 +74,7 @@
         </h2>
       </div>
       <div class="w-75 flex-column align-self-center">
+        <!-- Events -->
         <h2 class="bg-info-subtle">Events Stactics</h2>
         <div class="table-responsive">
           <table class="table table-striped table-sm">
@@ -84,103 +84,40 @@
                   Events width the highest percentage of attendance
                 </th>
                 <th scope="col">
-                  Events width the highest percentage of attendance
+                  Events width the lowest percentage of attendance
                 </th>
-                <th scope="col">
-                  Events width the highest percentage of attendance
-                </th>
+                <th scope="col">Events width larger capacity</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>data</td>
-                <td>placeholder</td>
-                <td>text</td>
-              </tr>
-              <tr>
-                <td>irrelevant</td>
-                <td>visual</td>
-                <td>layout</td>
-              </tr>
-              <tr>
-                <td>rich</td>
-                <td>dashboard</td>
-                <td>tabular</td>
-              </tr>
-              <tr>
-                <td>placeholder</td>
-                <td>illustrative</td>
-                <td>data</td>
-              </tr>
-            </tbody>
+            <tbody class="tbody1"></tbody>
           </table>
         </div>
+        <!-- Upcomming -->
         <h2 class="bg-info-subtle">Upcomming events stactics by category</h2>
         <div class="table-responsive">
           <table class="table table-striped table-sm">
             <thead>
               <tr>
-                <th scope="col">Category</th>
+                <th scope="col">Categories</th>
                 <th scope="col">Revenues</th>
                 <th scope="col">Percentage of attendance</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>data</td>
-                <td>placeholder</td>
-                <td>text</td>
-              </tr>
-              <tr>
-                <td>irrelevant</td>
-                <td>visual</td>
-                <td>layout</td>
-              </tr>
-              <tr>
-                <td>rich</td>
-                <td>dashboard</td>
-                <td>tabular</td>
-              </tr>
-              <tr>
-                <td>placeholder</td>
-                <td>illustrative</td>
-                <td>data</td>
-              </tr>
-            </tbody>
+            <tbody class="tbody2"></tbody>
           </table>
         </div>
+        <!-- Past -->
         <h2 class="bg-info-subtle">Past Events statics by category</h2>
         <div class="table-responsive">
           <table class="table table-striped table-sm">
             <thead>
               <tr>
-                <th scope="col">Category</th>
+                <th scope="col">Categories</th>
                 <th scope="col">Revenues</th>
                 <th scope="col">Percentage of attendance</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>data</td>
-                <td>placeholder</td>
-                <td>text</td>
-              </tr>
-              <tr>
-                <td>irrelevant</td>
-                <td>visual</td>
-                <td>layout</td>
-              </tr>
-              <tr>
-                <td>rich</td>
-                <td>dashboard</td>
-                <td>tabular</td>
-              </tr>
-              <tr>
-                <td>placeholder</td>
-                <td>illustrative</td>
-                <td>data</td>
-              </tr>
-            </tbody>
+            <tbody class="tbody3"></tbody>
           </table>
         </div>
       </div>
@@ -237,5 +174,8 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/stats.js"></script>
   </body>
 </html>
